<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_About"
        android:orderInCategory="100"
        android:title="@string/menu_about"
        app:showAsAction="never" />

    <item android:id="@+id/action_Contact"
        android:title="@string/menu_contact"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_ads"
        android:title="@string/menu_ads"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_setting"
        android:title="@string/menu_Setting"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>